basic article list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,10 @@
 </header>
 
 <body>
-    Hello <%= answer %>
+    <div id="root">
+        loading...
+    </div>
 </body>
+<script src="/bundle.js" charset="utf-8"></script>
 
 </html>
