--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,7 @@
 </header>
 
 <body>
-    <div id="root">
-        loading...
-    </div>
+    <div id="root"><%- initialContent -%></div>
 </body>
 <script src="/bundle.js" charset="utf-8"></script>
 
