--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,19 @@
 <html>
-<header>
-    <title>This is title</title>
-</header>
-
+<head>
+// head will be fetched b4 body 
+    <meta charset="UTF-8">
+    // https://www.w3schools.com/css/css_rwd_viewport.asp  meta viewport explained
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Advanced React Application Example</title>
+    <script type="text/javascript">
+        window.initialData = <%- JSON.stringify(initialData) -%>
+    </script>
+</head>
 <body>
-    <div id="root"><%- initialContent -%></div>
+    <div id="root">
+        <%- initialMarkup -%>
+    </div>
 </body>
 <script src="/bundle.js" charset="utf-8"></script>
 
