--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Advanced React Application Example</title>
     <script type="text/javascript">
+    // we use JSON.stringify since ejs requiers its render output to be a string .
+    // but on the browser this will be a json not a string 
         window.initialData = <%- JSON.stringify(initialData) -%>
     </script>
 </head>
