added vanila store to the application

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,7 @@
     </script>
 </head>
 <body>
-    <div id="root">
-        <%- initialMarkup -%>
-    </div>
+    <div id="root"><%- initialMarkup -%></div>
 </body>
 <script src="/bundle.js" charset="utf-8"></script>
 
