--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <html>
 <head>
-// head will be fetched b4 body 
+ <!-- head will be fetched b4 body -->
     <meta charset="UTF-8">
-    // https://www.w3schools.com/css/css_rwd_viewport.asp  meta viewport explained
+    <!-- https://www.w3schools.com/css/css_rwd_viewport.asp  meta viewport explained -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Advanced React Application Example</title>
     <script type="text/javascript">
-    // we use JSON.stringify since ejs requiers its render output to be a string .
+    //  we use JSON.stringify since ejs requiers its render output to be a string .
     // but on the browser this will be a json not a string 
         window.initialData = <%- JSON.stringify(initialData) -%>
     </script>
