--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,8 @@
 <body>
     <div id="root"><%- initialMarkup -%></div>
 </body>
-<script src="/bundle.js" charset="utf-8"></script>
+<script src="/vendor.js?version=1" charset="utf-8"></script>
+<style src="/styles.css?version=1" charset="utf-8"></style>
+<script src="/app.js?version=1" charset="utf-8"></script>
 
 </html>
