--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Advanced React Application Example</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <script type="text/javascript">
     //  we use JSON.stringify since ejs requiers its render output to be a string .
     // but on the browser this will be a json not a string 
@@ -13,7 +14,7 @@
     </script>
 </head>
 <body>
-    <div id="root"><%- initialMarkup -%></div>
+    <div id="root" className="container"><%- initialMarkup -%></div>
 </body>
 <script src="/vendor.js?version=1" charset="utf-8"></script>
 <style src="/styles.css?version=1" charset="utf-8"></style>
