--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,17 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Advanced React Application Example</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <script src="/vendor.js?version=1" charset="utf-8"></script>
+<link rel="stylesheet" href="/styles.css?version=1" charset="utf-8"></link>
     <script type="text/javascript">
     //  we use JSON.stringify since ejs requiers its render output to be a string .
     // but on the browser this will be a json not a string 
         window.initialData = <%- JSON.stringify(initialData) -%>
     </script>
+    
 </head>
 <body>
     <div id="root" className="container"><%- initialMarkup -%></div>
 </body>
-<script src="/vendor.js?version=1" charset="utf-8"></script>
-<style src="/styles.css?version=1" charset="utf-8"></style>
+
 <script src="/app.js?version=1" charset="utf-8"></script>
 
 </html>
